squid/nodeport-squid.yaml
apiVersion: v1
kind: Service
metadata:
  name: squid-nodeport
  namespace: squid
spec:
  type: NodePort
  selector:
    application: squid
    component: squid
  ports:
    - port: 3128
      targetPort: 3128
      nodePort: 30128
