squid/service-squid.yaml
apiVersion: v1
kind: Service
metadata:
  name: squid
  namespace: squid
spec:
  type: ClusterIP
  ports:
    - name: squid
      port: 3128
      targetPort: 3128
      protocol: TCP
  selector:
    application: squid
    component: squid
